# numerical-integration

./: Cargo.toml  LICENSE  README.md
examples/: adaptive.rs  exp_comparison.rs  harmonic_oscillator.rs  integral.rs
src/: lib.rs  runge_kutta.rs
