[package]
name = "numerical-integration"
authors = ["Joshua Smith <jsmith62831@gmail.com>"]
description = "Algorithms and traits for numerical approximation"
version = "0.1.0"
edition = "2021"
keywords = ["mathematics", "calculus", "integration", "algorithms", "approximation"]
categories = ["algorithms", "science"]
repository = "https://github.com/jsmith628/numerical-integration"
documentation = "https://docs.rs/numerical-integration"
license = "MIT"
readme = "README.md"

[dependencies]
maths-traits = "0.2"
